# Multi_agent_Customer_Service_System

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  mcp_config.json  pyproject.toml  tmp_test_mcp_session.py  多智能体客服系统设计文档_修订版.md  架构.md
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 20260324_01_add_is_pinned_to_conversations.py
data/: jd_electronics_20260317_222710.json  jd_electronics_20260317_223713.json  jd_electronics_20260317_223944.json  jd_electronics_20260317_224350.json  jd_electronics_latest.json  taobao_electronics_20260317_222710.json  taobao_electronics_20260317_223732.json  taobao_electronics_latest.json
data/eval_queries/: baseline_product_qa.json
docs/: AGENT_TESTS.md  frontend-ui-p0.md  system-optimization-todo.md  多智能体客服系统核心后端框架讲解.md  毕业设计内容与目录.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1773632734971-705a5eb31561a.mjs
frontend/src/: App.tsx  App.vue  index.css  main.ts
reports/baseline/: baseline-20260505-145539.json  baseline-20260505-145539.md  baseline-20260505-150117.json  (+3 more)
scripts/: build_knowledge_graph.py  crawl_electronics.py  init_db.py  list_mcp_tools.py  migrate_data.py  migrate_taobao_user_data.py  run_baseline_eval.py  seed_data.py  seed_products.py  test_complaint_api.py  test_complaint_direct.py  test_integration_taobao.py  test_routing.py
src/agents/: base.py  (+3 more)
tests/: conftest.py  report.html  tmp_test_refund_persistence.py
(+136 files in other folders)
